--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>JSON to Table</title>
+    <title>LunarCore Importer From Original Server</title>
     <style>
         table {
             width: 100%;
@@ -96,7 +96,8 @@
 </head>
 <body>
     <h1>Upload JSON File</h1>
-	<h3>How to get json file: <a href="https://github.com/fribbels/hsr-optimizer/discussions/403">https://github.com/fribbels/hsr-optimizer/discussions/403</a></h3>
+	<h3>How to obtain json file: <a href="https://github.com/fribbels/hsr-optimizer/discussions/403">https://github.com/fribbels/hsr-optimizer/discussions/403</a></h3>
+	<h4>After completing step 5, copy the text, then paste it into a file and save it as 'yourfilename.json', with 'yourfilename' being any name you like.</h4>
 	<br />
 	<label for="uidInput">UID:</label>
 	<input type="text" id="uidInput" value="100001">
