--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 			<strong>Note:</strong> For relic stats, due to the randomness while upgrading, the final stats of relics may differ from the original server. However, they will remain close, with minor differences.
 		</p>
 		<p>
-			After copy, paste it into the LunarCore command (PowerShell on Windows).
+			After copying, paste it into the LunarCore command (PowerShell on Windows).
 		</p>
 	</div>
     <table id="dataTable" style="display:none;">
