--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	<br />
 	<label for="uidInput">UID: </label>
 	<input type="text" id="uidInput" value="10001">
-	<span>Note: Enter your UID, which can be found in the bottom left corner of the game. If this is your first time creating a server, just skip this UID thing.</span>
+	<span>Note: Enter your UID, which can be found in the bottom left corner of the game. If this is your first time creating a server, you can skip entering the UID.</span>
 	<div id="uidError" style="color: red; font-size: 12px; visibility: hidden;">Please enter a valid UID.</div>
 	<label for="fileInput">Upload your JSON file: </label>
     <input type="file" id="fileInput">
